--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
   <h1>nahyun's portfolio</h1>
+  <h2><a href="#">nahyeon's resume</a></h2>
+  <h2><a href="./portfolio/cultureDay/">portfolio_1</a></h2>
 </body>
 </html>
