--- a/portfolio/cultureDay/html/jongmyo_main.html
+++ b/portfolio/cultureDay/html/jongmyo_main.html
@@ -6,7 +6,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0, 
    minimum-scale=1.0, maximum-scale=3.0, min-width=0.5">
  <link rel="stylesheet" href="../fontAwesome/css/font-awesome.min.css">
- <link rel="stylesheet" href="../css/jongmy$o_main.css">
+ <link rel="stylesheet" href="../css/jongmyo_main.css">
  <script src="../js/jQuery/jquery-3.2.1.min.js"></script>
  <script src="../js/jQuery/jquery-ui.min.js"></script>
  <title>jongmyo</title>
