--- a/portfolio/cultureDay/html/jongmyo_main.html
+++ b/portfolio/cultureDay/html/jongmyo_main.html
@@ -81,31 +81,36 @@
              <div class="information">
                <div class="info_text">
                    <h2>2017 한밤의 모꼬지</h2>
-                   <p class="party_more">
+                   <div class="party_more">
                      5월 가정의 달을 맞아<br>
                      남녀, 노소, 가족, 연인 모두<br>
                      초여름의 정취 속에 조선의 향기를 느낄 수 있는<br>
-                     한밤의 모꼬지를 개최 합니다. 
-                    <dt>일시</dt> 
-                     <dd>2017. 5.3 - 5.5 (3일간)<br>
-                     19:00 - 22:00</dd>
-                     <dt>행사</dt> 
-                      <dd>1부 - 그림자 연극, 국악마당<br> 
-                      2부 - 한밤 걷기, 연등날리기</dd>
-                     <dt>안내사항</dt>
-                     <dd>
-                     <ul>
-                      <li>종묘 자유관람은 불가합니다.</li>
-                      <li>야외행사임에 따라 기상악화(우천)로 인하여
-                       행사가 취소될 경우<br> 관람료는 전액 환불해 드립니다.</li>
-                      <li>행사장은 문화재 보호구역으로 애완동물 및 <br>취식물의 반입이 제한됩니다.</li>
-                     </ul>
-                     </dd>
-                   </p>
+                     한밤의 모꼬지를 개최 합니다.
+                     <br> 
+                     <br>
+    
+                      <dl>
+                        <dt>일시</dt> 
+                         <dd class="t_margin"><p>2017. 5.3 - 5.5 (3일간)<br>
+                           19:00 - 22:00</p></dd>
+                         <dt>행사</dt> 
+                          <dd class="t_margin"><p>1부 - 그림자 연극, 국악마당<br> 
+                          2부 - 한밤 걷기, 연등날리기</p></dd>
+                         <dt>안내사항</dt>
+                         <dd>
+                         <ul class="t_margin">
+                          <li class="s_text">종묘 자유관람은 불가합니다.</li>
+                          <li class="s_text">야외행사임에 따라 기상악화(우천)로 인하여<br>
+                           행사가 취소될 경우 관람료는 전액 환불해 드립니다.</li>
+                          <li class="s_text">행사장은 문화재 보호구역으로 애완동물 및 <br>취식물의 반입이 제한됩니다.</li>
+                         </ul>
+                         </dd>                   
+                      </dl>
                  </div>
              </div>
            </div>
          </div>
+      </div>
     </article>
     <!--#party---------------------------------------------------------->
     <div id="partition"></div>
