--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>nahyun's portfolio</h1>
+  <h1>nahyeon's portfolio</h1>
   <h2><a href="#">nahyeon's resume</a></h2>
   <h2><a href="./portfolio/cultureDay/">portfolio_1</a></h2>
 </body>
