다른경로 동일파일에서 작업하는 실수함

--- a/portfolio/cultureDay/html/jongmyo_main.html
+++ b/portfolio/cultureDay/html/jongmyo_main.html
@@ -51,6 +51,7 @@
           </ul>
         </div>
       </div>
+      <div class="scroll_i"></div>
     </header>
     <!-- #headBox ______________________________________________________ -->
     <article id="aboutJongmyo" class="indi_wrap">
@@ -331,8 +332,7 @@
 
   <script src="../js/src/galleryBox.js"></script>
   <script src="../js/src/party.js"></script>
-  <script src="../js/src/timetable.js">
-  </script>
+  <script src="../js/src/timetable.js"></script>
   <script src="../js/src/headBox.js"></script>
   <script src="../js/src/historyBox.js"></script>
 </body>
