개인사이트 대략만듦
 입사지원위해 개인사이트 대략만들었음

--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="./css/portfolio_main.css">
   <title>Document</title>
 </head>
 <body>
-  <h1>nahyeon's portfolio</h1>
-  <h2><a href="#">nahyeon's resume</a></h2>
-  <h2><a href="./portfolio/cultureDay/">portfolio_1</a></h2>
+ 
+  <div id="wrap">
+    <header id="headBox">
+      <h1>YIM NA HYEON</h1>
+      <h2>2017 PORTFOLIO</h2>
+    </header>
+    <article id="cBox">
+      <a href="./resume/">
+         <div class="resume_b">
+          <h2 >RESUME</h2>
+        </div>
+      </a>
+      <a href="./portfolio/cultureDay/">
+       <div class="portfolio_b1">
+        <h2>PORTFOLIO SITE_1</h2>
+       </div>
+      </a>
+    </article>
+  </div>
 </body>
 </html>
