--- a/portfolio/cultureDay/html/jongmyo_main.html
+++ b/portfolio/cultureDay/html/jongmyo_main.html
@@ -17,7 +17,7 @@
     <header id="headBox" class="indi_wrap">
       <h2 class="hidden">headBox</h2>
        <div class="video_box">
-         <video id="mainVideo" autoplay muted>
+         <video id="mainVideo" poster="../image/" autoplay muted loop >
          <source src="../video/korea_jongmyo.mp4" type="video/mp4">
          </video>
        </div>
